
    o   getMethod returns NULL when optional=TRUE as promised in the
        documentation.

    o   setMethod allows "..." to be one of the arguments omitted in
        the method definition (but so far no check for ... being missing)

    o   Allow round() to work again on very large numbers (introduced
	in fixing PR#1138). (PR#1254)



		CHANGES IN R VERSION 1.4.0


USER-VISIBLE CHANGES

    [This is a new section to highlight changes in behaviour, which
    may be given in more detail in the following sections.
    Many bug fixes are also user-visible changes.]

    o	The default save format has been changed, so saved workspaces
	and objects cannot (by default) be read in earlier versions of R.

    o	The number of bins selected by default in a histogram uses
	the correct version of Sturges' formula and will usually be
	one larger.

    o	data.frame() no longer converts logical arguments to factors
	(following S4 rather than S3).

    o	read.table() has new arguments `nrows' and `colClasses'.  If the
	latter is NA (the default), conversion is attempted to
	logical, integer, numeric or complex, not just to numeric.

    o	model.matrix() treats logical variables as a factors with
	levels c(FALSE, TRUE) (rather than 0-1 valued numerical
	variables).  This makes R compatible with all S versions.

    o	Transparency is now supported on most graphics devices.
	This means that using par("bg"), for example in legend(), will
	by default give a transparent rather than opaque background.

    o	[dpqr]gamma now has third argument `rate' for S-compatibility
	(and for compatibility with exponentials).  Calls which use
	positional matching may need to be altered.

    o	The meaning of spar = 0 in smooth.spline() has changed.

    o	substring() and substring()<- do nothing silently on a
	character vector of length 0, rather than generating an
	error.	This is consistent with other functions and with S.

    o	For compatibility with S4, any arithmetic operation using a